[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-x402"
version = "0.1.0"
description = "x402 payment protocol integration for LangChain - enable AI agents to pay for APIs with USDC"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AgentRails", email = "dev@agentrails.io" }
]
keywords = ["langchain", "x402", "payments", "ai-agents", "usdc", "crypto", "api-monetization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.1.0",
    "httpx>=0.25.0",
    "eth-account>=0.10.0",
    "eth-typing>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://agentrails.io"
Documentation = "https://agentrails.io/docs"
Repository = "https://github.com/kmatthewsio/langchain-x402"
Issues = "https://github.com/kmatthewsio/langchain-x402/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_x402"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
